// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with addon prop 1`] = `
<div
  class="flex"
>
  <span
    class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 bg-gray-200 px-3 text-sm text-gray-900 dark:border-gray-600 dark:bg-gray-600 dark:text-gray-400"
  >
    Addon text
  </span>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-r-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with all props combined 1`] = `
<div
  class="flex complete-textinput-class"
>
  <span
    class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 bg-gray-200 px-3 text-sm text-gray-900 dark:border-gray-600 dark:bg-gray-600 dark:text-gray-400"
  >
    Complete addon
  </span>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-r-lg"
      id="complete-textinput-id"
      label="Complete Label"
      name="complete-textinput"
      placeholder="Complete placeholder"
      required=""
      type="password"
      value="complete-value"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with custom className 1`] = `
<div
  class="flex custom-textinput-class"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with custom id 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      id="custom-textinput-id"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with custom props 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      data-custom="test-value"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with custom type 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="email"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with default props 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with different input types > email type textinput 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="email"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with different input types > number type textinput 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="number"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with different input types > password type textinput 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="password"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with different input types > search type textinput 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="search"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with different input types > tel type textinput 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="tel"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with different input types > text type textinput 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with different input types > url type textinput 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="url"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with disabled prop 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      disabled=""
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with empty addon 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with empty className 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with empty helperText 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with empty id 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      id=""
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with empty label 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      label=""
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with empty name 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      name=""
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with empty placeholder 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      placeholder=""
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with empty type 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type=""
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with empty value 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with helperText prop 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with label prop 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      label="Input Label"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with long id 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      id="input-with-very-long-id-that-contains-multiple-words-and-should-be-handled-properly-by-the-component"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with long placeholder 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      placeholder="This is a very long placeholder that should be handled properly by the component and should not break the layout or functionality"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with long value 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
      value="This is a very long value that should be handled properly by the component and should not break the layout or functionality"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with multiple classes 1`] = `
<div
  class="flex class1 class2 class3"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with multiple custom props 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      aria-label="Custom textinput"
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      data-another="another-value"
      data-custom="test-value"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with name prop 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      name="textinput-name"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with null addon 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with null className 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with null helperText 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with null label 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with null name 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with null placeholder 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with null type 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with null value 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with onChange handler 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with placeholder prop 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      placeholder="Enter text here"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with readOnly prop 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      readonly=""
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with required prop 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      required=""
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with special characters in id 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      id="input-with-special-chars-!@#$%^&*()"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with special characters in name 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      name="input-name-with-special-chars-!@#$%^&*()"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with special characters in placeholder 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      placeholder="Placeholder with special chars: !@#$%^&*()"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with special characters in value 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
      value="Value with special chars: !@#$%^&*()"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with undefined addon 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with undefined className 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with undefined helperText 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with undefined id 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with undefined label 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with undefined name 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with undefined placeholder 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with undefined type 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with undefined value 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with unicode characters in id 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      id="input-with-unicode-📝✏️"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with unicode characters in placeholder 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      placeholder="Placeholder with unicode: 📝 ✏️"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with unicode characters in value 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
      value="Value with unicode: 📝 ✏️"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with value prop 1`] = `
<div
  class="flex"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
      value="textinput-value"
    />
  </div>
</div>
`;

exports[`TextInput - Snapshot Tests > matches snapshot for textinput with whitespace in className 1`] = `
<div
  class="flex spaced-class"
>
  <div
    class="relative w-full"
  >
    <input
      class="block w-full border disabled:cursor-not-allowed disabled:opacity-50 border-gray-300 bg-gray-50 text-gray-900 focus:border-cyan-500 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-cyan-500 dark:focus:ring-cyan-500 p-2.5 text-sm rounded-lg"
      type="text"
    />
  </div>
</div>
`;
